Changes made for test file

--- a/RLS_Estimation_Visual_studio/RLS_Estimation.vcxproj
+++ b/RLS_Estimation_Visual_studio/RLS_Estimation.vcxproj
@@ -64,6 +64,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="RLS_Estimation.cpp" />
+    <ClCompile Include="RLS_testing.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Users\Nikos\Documents\qbMatrix_Big.h" />
