--- a/examples/RLS_Estimation_Visual_studio/RLS_Estimation.vcxproj
+++ b/examples/RLS_Estimation_Visual_studio/RLS_Estimation.vcxproj
@@ -64,11 +64,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="RLS_testing.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Users\Nikos\Documents\qbMatrix_Big.h" />
     <ClInclude Include="..\..\Users\Nikos\Documents\qbVector.h" />
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="RLS_Estimation_Object.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
