Added test .cpp for BlockRLS

--- a/examples/RLS_Estimation_Visual_studio/RLS_Estimation.vcxproj
+++ b/examples/RLS_Estimation_Visual_studio/RLS_Estimation.vcxproj
@@ -64,7 +64,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="RLS_testing.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Block_Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Users\Nikos\Documents\qbMatrix_Big.h" />
