--- a/examples/filtertest/CMakeLists.txt
+++ b/examples/filtertest/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 3.5)
 
 project(test LANGUAGES CXX)
 
-find_package(Armadillo REQUIRED)
+find_package(Eigen3 3.3 REQUIRED)
 
-include_directories(${ARMADILLO_INCLUDE_DIR})
+include_directories(${EIGEN3_INCLUDE_DIR})
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -13,4 +13,4 @@ include_directories(../source)
 
 add_executable(filtertest filtertest.cpp)
 
-target_link_libraries(filtertest ${ARMADILLO_LIBRARIES})
+target_link_libraries(filtertest Eigen3::Eigen)
