--- a/filter/CMakeLists.txt
+++ b/filter/CMakeLists.txt
@@ -1,10 +1,14 @@
 
-find_package(Eigen3 3.3 REQUIRED)
-include_directories(${EIGEN3_INCLUDE_DIR})
-
 include_directories(../source)
 
-add_executable(rlsfilter rlsfilter.cpp ../source/RLS.h)
+add_executable(rlsfilter 
+   rlsfilter.cpp 
+   ../source/RLS.h
+)
 
-target_link_libraries(rlsfilter Eigen3::Eigen)
+add_executable(polyrlsfilter 
+    polyrlsfilter.cpp 
+    ../source/RLS.h 
+    ../source/PolyRLS.h
+)
 
